--- a/VS uppgift/index.html
+++ b/VS uppgift/index.html
@@ -6,21 +6,19 @@
     <link rel="stylesheet" href="Data.css">
 
    <meta charset="utf-8">
-   <title>Data uppgift</title>
+   <title>CV sida</title>
 
 </head>
 
-<body><div class="topnav">
-    <a class="active" href="#home">Home</a>
-    <a href="#news">News</a>
-    <a href="#contact">Contact</a>
-    <a href="#about">About</a>
-  </div>
-<h1>SÖT HUND TILL SALU</h1>
-    <img src="Hundar/Rolig-hund.jpg" class="responsive">
-    <p>Här har vi en söt liten hund till salu, jag söker en köpare i närheten av gävle. Pris 11000 At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.
-      
-    </p>
+<body>
+<div class="topnav">
+    <a class="active" href="index.html">Jag</a>
+    <a href="gym.html">Intresse</a>
+    <a href="#contact">CV</a>
+</div>
+<h1>Lite fakta om mig</h1>
+<p>Hej jag heter Emilio, Jag studerar Data och nätverksteknik och jag går i skolan, Polhemskolan i Gävle går i mitt andra år i gymnasium. jag är cirka 170cm lång och är 17år. Jag bor i valbo och tar bussen til skolan varenda dag, jag älskar att gymma och spela datorspel. jag gillar att skoja runt och ha kul. Jag kan vara ofokuserad ibland men när jag kommer igång med jobb så gör jag det snabbt och rätt. Gillar att jobba med det praktiska.  </p>
 </body>
 
 </html>
+
