--- a/VS uppgift/index.html
+++ b/VS uppgift/index.html
@@ -14,7 +14,7 @@
 <div class="topnav">
     <a class="active" href="index.html">Jag</a>
     <a href="gym.html">Intresse</a>
-    <a href="#contact">CV</a>
+    <a href="CV.html">CV</a>
 </div>
 <h1>Lite fakta om mig</h1>
 <p>Hej jag heter Emilio, Jag studerar Data och nätverksteknik och jag går i skolan, Polhemskolan i Gävle går i mitt andra år i gymnasium. jag är cirka 170cm lång och är 17år. Jag bor i valbo och tar bussen til skolan varenda dag, jag älskar att gymma och spela datorspel. jag gillar att skoja runt och ha kul. Jag kan vara ofokuserad ibland men när jag kommer igång med jobb så gör jag det snabbt och rätt. Gillar att jobba med det praktiska.  </p>
