--- a/VS uppgift/gym.html
+++ b/VS uppgift/gym.html
@@ -12,9 +12,9 @@
 
 <body>
     <div class="topnav">
-        <a class="active" href="index.html">Jag</a>
-        <a href="gym.html">Intresse</a>
-        <a href="#contact">CV</a>
+        <a href="index.html">Jag</a>
+        <a class="active" href="gym.html">Intresse</a>
+        <a href="CV.html">CV</a>
     </div>
     <h1>Ett av mina intessen</h1>
 </body><p>Jag gillar ju då att gymma, jag gymmar i prinsip varenda dag jag har bara en vilo dag per vecka. Mitt schema börjar jag med dag 1 Rygg och biceps, Dag 2 bröst,triceps och underarmar, dag 3 axlar, dag 4 ben dag 5 bröst triceps och underarmar dag 6 rygg biceps dag 7 är min vilodag.Det blir ganska mycket men jag tycker att det är roligt att bygga upp sin kropp och man mår väldigt bra av det. Jag har ett tips för nybörjare i gymmet och det är att fokusera på formen när du utför övningar, det är viktigt för att inte skada dig. Se till att inte lägga på för mycket vikt i början för sitt eget ego utan att kör lite lättare och träna på form innan du börjar köra mer vikt.</p>
